# nexus

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/: routes.py  websocket.py
backend/src/db/: database.py
backend/src/models/: schemas.py
backend/src/services/: agent_service.py  litellm_client.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx  ExecutionMonitor.tsx  Layout.tsx  ResultsViewer.tsx  TeamBuilder.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: index.ts
